--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -28,20 +28,25 @@ header{
     background-color:#fff6c2;
 }
 
+nav a{
+    background-color:#fff6c2;
+    color:#3a5590;
+}
+
 nav a:hover{
-    background-color:fff;
-    color: #3a5590;
+    background-color:#fff6c2;
+    color: #fff;
 }
 
 .book, .join{
     background-color:#3a5590;
-    color: #3a5590;
+    color: #fff6c2;
     text-decoration:none;
 }
 
 .book:hover, .join:hover{
-    background-color:#fff6c2;
-    color: #3a5590;
+    background-color:#3a5590;
+    color: #fff;
 }
 
 #background{
@@ -49,11 +54,10 @@ nav a:hover{
 }
 
 .msg{
-    background-color:#3a5590;
-}
+    background-color:#3a5590}
 
 footer {
-    background-color: #fff6c2;
+    background-color: #3a5590;
 }
 
 nav a{
@@ -71,22 +75,22 @@ h4{
 }
 
 .msg h2 {
-    color:#3a5590;
+    color:#fff6c2;
 }
 
 .msg p{
-    color:#3a5590;
+    color:#fff6c2;
 }
 
 footer h3{
-    color:#3a5590;
+    color:#fff6c2;
 }
 
 footer a{
-    color:#3a5590;
+    color:#fff6c2;
     text-decoration:none;
 }
 
 footer a:hover{
-    color:#3a5590;
+    color:#fff;
 }
