--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,6 +1,18 @@
-#content {
+@import url('https://fonts.googleapis.com/css2?family=Jua&family=Open+Sans:wght@300&display=swap');
+
+/* #content */
+
+body {
+    font-family: Open Sans, 'Times New Roman', Times, serif;
+    font-size: 22px;
     max-width: 1600px;
     margin: 0 auto;
+    margin: 0;
+    padding: 0;
+}
+
+h2 {
+    margin: 0;
 }
 
 nav a, #hero-msg h1, #hero-msg h4, .button-box, main section {
@@ -8,16 +20,26 @@ nav a, #hero-msg h1, #hero-msg h4, .button-box, main section {
 
 }
 
+main section img{
+    box-sizing: border-box;
+}
+
 #background {
     height: 725px;
+
 }
 
 .logo {
     width:80px;
 }
 
+#logo_link {
+    padding-top: 5px;
+}
+
 .icon {
     width: 80px; 
+    padding-top: 10px;
 }
 
 #hero-img {
@@ -31,6 +53,7 @@ header{
 nav a{
     background-color:#fff6c2;
     color:#3a5590;
+    padding: 35px;
 }
 
 nav a:hover{
@@ -39,9 +62,13 @@ nav a:hover{
 }
 
 .book, .join{
-    background-color:#3a5590;
-    color: #fff6c2;
+    background-color:#fff6c2;
+    color: #3a5590;
     text-decoration:none;
+    font-size:18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 
 .book:hover, .join:hover{
@@ -54,10 +81,14 @@ nav a:hover{
 }
 
 .msg{
-    background-color:#3a5590}
+    background-color:#3a5590;
+    padding: 35px;
+}
 
 footer {
-    background-color: #3a5590;
+    background-color: #fff6c2;
+    padding: 25px, 50px;
+    margin-top: 200px;
 }
 
 nav a{
@@ -68,6 +99,9 @@ nav a{
 
 .home-title{
     color:#3a5590;
+    font-family: Jua, 'Times New Roman', Times, serif;
+    font-size: 2em;
+    margin-top: 10px
 }
 
 h4{
@@ -76,21 +110,36 @@ h4{
 
 .msg h2 {
     color:#fff6c2;
+    font-family:Jua, 'Times New Roman', Times, serif;
 }
 
 .msg p{
     color:#fff6c2;
+    font-size:.8em;
+    padding-bottom: 15px;
 }
 
 footer h3{
-    color:#fff6c2;
+    color:#3a5590;
 }
 
 footer a{
-    color:#fff6c2;
+    color: #3a5590;;
     text-decoration:none;
 }
 
 footer a:hover{
     color:#fff;
+}
+
+footer .social img{
+    padding-top:15px;
+}
+
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+}
+
+.card{
+    border: 10px, solid, #3a5590;
 }
