--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -35,6 +35,8 @@ main section img{
 
 #logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
 .icon {
@@ -42,18 +44,47 @@ main section img{
     padding-top: 10px;
 }
 
+#hero-msg{
+    grid-column:2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+
 #hero-img {
     width: 100%;
+}
+#hero-msg h4{
+    color:white;
+}
+
+#hero-box {
+    grid-column:1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+#hero {
+    display:grid;
+    grid-template-columns: 1fr, 3fr, 1fr;
+    margin-top: -100px
 }
 
 header{
     background-color:#fff6c2;
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 
 nav a{
     background-color:#fff6c2;
     color:#3a5590;
     padding: 35px;
+}
+
+nav{
+    display: flex;
+    justify-content: space-around;
+
 }
 
 nav a:hover{
@@ -83,12 +114,24 @@ nav a:hover{
 .msg{
     background-color:#3a5590;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+    z-index: 1;
 }
 
 footer {
     background-color: #fff6c2;
     padding: 25px 50px;
     margin-top: 200px;
+    display:flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.home-grid {
+    display: grid; 
+    grid-template-columns: repeat(10, 1fr);
 }
 
 nav a{
@@ -98,7 +141,7 @@ nav a{
 }
 
 .home-title{
-    color:#3a5590;
+    color:#fff;
     font-family: Jua, 'Times New Roman', Times, serif;
     font-size: 2em;
     margin-top: 10px
@@ -137,9 +180,96 @@ footer .social img{
 }
 
 .rivers-card, .camping-card, .rapids-card {
-    margin: 200px 0;
+    margin: 50px ;
+    width: 100%;
 }
 
 .card{
     border: 10px solid #3a5590;
+}
+
+.card-img, .mountains {
+    width: 100%;
+}
+
+.rivers-card{
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.camping-card{
+    grid-column:5/7;
+    grid-row:2/3;
+}
+
+.rapids-card{
+    grid-column:8/10;
+    grid-row:2/3;
+}
+
+#background{
+    grid-column:1/11;
+    grid-row:4/9;
+}
+
+.mountains{
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364
+} 
+
+.card-img {
+    border: 10px solid #d9c2a3;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364
+}
+
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        background-color: #6f7362;
+    }
 }
