--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -180,7 +180,7 @@ footer .social img{
 }
 
 .rivers-card, .camping-card, .rapids-card {
-    margin: 50px ;
+    margin: auto;
     width: 100%;
 }
 
