--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -65,7 +65,7 @@ main section img{
 
 #hero {
     display:grid;
-    grid-template-columns: 1fr, 3fr, 1fr;
+    grid-template-columns: 1fr 3fr 1fr;
     margin-top: -100px
 }
 
