--- a/book_of_hoops/styles/site-plan.css
+++ b/book_of_hoops/styles/site-plan.css
@@ -173,3 +173,10 @@ nav a:hover {
   border-top: 1px solid;
   border-right: 1px solid;
 }
+
+#youth, #kobe, #hoops, #logo {
+  width:300px;
+  height: 300px;
+  padding:15px;
+}
+
