--- a/book_of_hoops/styles/book_of_hoops.css
+++ b/book_of_hoops/styles/book_of_hoops.css
@@ -39,7 +39,7 @@ header{
 #Title3{
     margin-top: 0px;
     text-align: center;
-    font-family: 'Raleway'
+    font-family: 'Alegraya SC'
 }
 
 
@@ -102,6 +102,7 @@ h4{
     color:#fff;
     text-align:center;
     margin-top: 50px;
+    font-family: 'Alegraya SC';
 }
 
 
@@ -125,7 +126,7 @@ h4{
     color:white;
     background-color: #BED3F0;
     text-align: center;
-    /* margin-bottom: 100px; */
+    margin-top: 100px;
 }
 
 
@@ -155,4 +156,80 @@ footer a:hover{
 
 footer .social img{
     padding-top:15px;
+}
+
+#statistics-selector{
+    color:white;
+    text-align:center;
+    background-color: #4449B7;
+    margin-top: 6%;
+}
+
+#stats-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+#kobe-v-jordan{
+    grid-column: 1/3;
+    color:white;
+    text-align: center;
+    background-color: #4449B7;
+    padding-bottom: 5%;
+    margin-top: 6%;
+    margin-bottom: 6%
+}
+
+.kobe-pic{
+    width:38%;
+    float:left;
+    margin-right: 2%;
+}
+
+.kobe-stat-pic{
+    width: 45%;
+}
+
+.jordan-stat-pic{
+    width: 45%;
+}
+
+#stats-info{
+    background-color: black;
+    grid-column: 1/3;
+    text-align: center;
+    margin-top: 10%;
+    margin-bottom: 10%
+}
+
+#stat-paragraph{
+    color:white;
+    font-family:'Raleway';
+    margin-right: 2%;
+}
+
+
+h1{
+    background-color: #BED3F0;
+    color:black
+}
+
+h2{
+    color:black;
+    margin-top:6%;
+    margin-bottom:5%;
+}
+
+#curry-stats{
+    text-align: center;
+    grid-column:1/3;
+    padding-left:5%;
+    padding-right:5%;
+    margin-bottom:8%;
+}
+
+.background-curry{
+    background-color: #4449B7;
+    width:100%;
+    height:100%;
 }
