--- a/book_of_hoops/styles/book_of_hoops.css
+++ b/book_of_hoops/styles/book_of_hoops.css
@@ -1,5 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Alegreya+SC&family=Raleway:ital,wght@0,200;1,200&display=swap');
 
+
+.login-container{
+    position: relative;
+    top:34px;
+}
+
+/* Add responsiveness - On small screens, display the navbar vertically instead of horizontally */
+@media screen and (max-width: 600px) {
+  .topnav .login-container {
+    float: none;
+  }
+  .topnav a, .topnav input[type=text], .topnav .login-container button {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
+  }
+  .topnav input[type=text] {
+    border: 1px solid #ccc;
+  }
+}
+
 body {
     font-family: 'Alegraya';
     font-size: 22px;
