--- a/book_of_hoops/styles/book_of_hoops.css
+++ b/book_of_hoops/styles/book_of_hoops.css
@@ -25,7 +25,7 @@
 }
 
 body {
-    font-family: 'Alegraya';
+    font-family: 'Alegraya SC';
     font-size: 22px;
     max-width: 1600px;
     height: 300px;
